# fyp-vla-ur5e

./: .gitignore  MUJOCO_LOG.TXT  README.md  main.py  pyproject.toml
assets/mujoco/ur5e/: scene.xml  scene_gripper.xml  scene_with_gripper.xml  ur5e.xml
config/: config.yaml
docs/: architecture.md  commands.md  ursim_setup_reference.md
docs/fyp_vault/: Repository Architecture.md
logs/: joint_log.csv
scripts/: attach_gripper.py  custom_recipe.py  dashboard_server.py  explore_error_handling.py  hdf5_to_lerobot.py  record_replay_episode.py  render_rgbd_test.py  replay_episode.py
src/: square.py  test_rtde.py  test_script_socket.py  test_ursim.py
src/fyp/: config.py  controller.py  transforms.py
src/fyp/sim/: demo_recorder.py  ik.py  mujoco_controller.py  sim_client.py  sim_server.py
src/testing/: square.py  test_receive.py
tests/: pytest_controller.py
