[project]
name = "llm_based_interface_for_robotics_systems_using_ur5e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "pyyaml>=6.0.3",
    "ur-rtde>=1.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fyp"]