[project]
name = "llm_based_interface_for_robotics_systems_using_ur5e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.11.0",
    "mujoco>=3.10.0",
    "numpy>=2.5.0",
    "pillow>=12.3.0",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "ur-rtde>=1.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fyp"]
